# api/swagger.json
@@ -101,6 +101,39 @@
         }
       }
     },
+    "/api/admin/user-list": {
+      "get": {
+        "tags": ["Admin"],
+        "parameters": [
+          {
+            "name": "page",
+            "in": "query",
+            "description": "Page number for pagination",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 1
+            }
+          },
+          {
+            "name": "paginate",
+            "in": "query",
+            "description": "Number of items per page",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "default": 10
+            }
+          }
+        ],
+        "summary": "",
+        "responses": {
+          "200": {
+            "description": "Successful response"
+          }
+        }
+      }
+    },
     "/api/user/register": {
       "post": {
         "tags": ["Users"],
@@ -561,7 +594,7 @@
             "multipart/form-data": {
               "schema": {
                 "type": "object",
-                "properties": {
+
                   "properties": {
                     "name": {
                       "type": "string"
@@ -583,7 +616,7 @@
                     }
                   },
                   "required": ["name", "categoryId"]
-                }
+                
               }
             }
           },
@@ -739,7 +772,6 @@
         }
       }
     },
-    
     "/api/program-movement": {
       "get": {
         "tags": ["Programs Movement"],
